Finally working. Logged issue:
https://github.com/ttutisani/Xunit.Gherkin.Quick/issues/82

--- a/test/Ray.Domain.Test/Ray.Domain.Test.csproj
+++ b/test/Ray.Domain.Test/Ray.Domain.Test.csproj
@@ -7,16 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Tuples\ComparePointsAndVectorsTests.cs" />
-    <Compile Remove="Tuples\ConvertTupleToPointOrVectorTests.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="Tuples\ComparePointsAndVectorsTests.cs" />
-    <None Include="Tuples\ConvertTupleToPointOrVectorTests.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="Xunit.Gherkin.Quick" Version="3.4.0" />
@@ -35,10 +25,10 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="features\tuples\ComparePointsAndVectors.feature">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="features\tuples\ConvertTupleToPointOrVector.feature">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
