--- a/tools/Ray.Util.Console/Ray.Util.Console.csproj
+++ b/tools/Ray.Util.Console/Ray.Util.Console.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="4.5.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\app\Ray.Domain\Ray.Domain.csproj" />
   </ItemGroup>
 
