Closing out some "ray transformation" tests. Have realised that my different way of calculating ray-sphere intersections is no longer compatible with the text. So will now have to refactor existing code significantly.

--- a/test/Ray.Domain.Test/Ray.Domain.Test.csproj
+++ b/test/Ray.Domain.Test/Ray.Domain.Test.csproj
@@ -39,6 +39,9 @@
     <None Update="features\rays\RaySphere.feature">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="features\rays\TransformRaySphere.feature">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="features\tuples\BasicMathOps.feature">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
