phong reflection calculations and tests

--- a/test/Ray.Domain.Test/Ray.Domain.Test.csproj
+++ b/test/Ray.Domain.Test/Ray.Domain.Test.csproj
@@ -24,6 +24,9 @@
     <None Update="features\colors\BasicColorOps.feature">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="features\light\LightPhong.feature">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="features\light\LightShade.feature">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
