Shadows rendering nicely. Some work to eliminate "acne". May now try to reintroduce as an "effect".

--- a/test/Ray.Domain.Test/Ray.Domain.Test.csproj
+++ b/test/Ray.Domain.Test/Ray.Domain.Test.csproj
@@ -57,6 +57,9 @@
     <None Update="features\scene\World.feature">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="features\shadow\Shadows.feature">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="features\tuples\BasicMathOps.feature">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
