--- a/app/Ray.Web.Api/Dockerfile
+++ b/app/Ray.Web.Api/Dockerfile
@@ -4,6 +4,9 @@ FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-buster-slim AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    libc6-dev \
+    libgdiplus
 
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 WORKDIR /src
